openshift/frontend/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: frontend
  name: stocks
spec:
  port:
    targetPort: 3000-tcp
  subdomain: ""
  to:
    kind: Service
    name: frontend
    weight: 100
  wildcardPolicy: None
